--- a/NOBApp.csproj
+++ b/NOBApp.csproj
@@ -12,7 +12,7 @@
     <PackageIcon>SteamPGIN.png</PackageIcon>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <ImplicitUsings>disable</ImplicitUsings>
-    <BaseOutputPath>F:\NOBOnline\BOT</BaseOutputPath>
+    <BaseOutputPath>F:\NOBOnline\BOT2</BaseOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,11 +44,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="13.0.1" />
-    <PackageReference Include="GData.Spreadsheets.Helpers" Version="2.2.0" />
     <PackageReference Include="Google.Apis.Sheets.v4" Version="1.68.0.3624" />
-    <PackageReference Include="NPOI" Version="2.7.0" />
-    <PackageReference Include="NtpClient" Version="1.0.14" />
     <PackageReference Include="System.Management" Version="8.0.0" />
   </ItemGroup>
 
