--- a/NOBApp.csproj
+++ b/NOBApp.csproj
@@ -45,11 +45,13 @@
 
 	<ItemGroup>
 		<PackageReference Include="Google.Apis.Sheets.v4" Version="1.68.0.3624" />
+		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3124.44" />
 		<PackageReference Include="MSBuildTasks" Version="1.5.0.235">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="System.Management" Version="8.0.0" />
+		<PackageReference Include="WebView2.Runtime.X86" Version="134.0.3124.68" />
 	</ItemGroup>
 
 	<ItemGroup>
