--- a/NOBApp.csproj
+++ b/NOBApp.csproj
@@ -12,7 +12,7 @@
 		<PackageIcon>SteamPGIN.png</PackageIcon>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<ImplicitUsings>disable</ImplicitUsings>
-		<BaseOutputPath>F:\NOBOnline\BOT</BaseOutputPath>
+		<BaseOutputPath>C:\BOT</BaseOutputPath>
 	</PropertyGroup>
 	
 	<ItemGroup>
@@ -45,13 +45,11 @@
 
 	<ItemGroup>
 		<PackageReference Include="Google.Apis.Sheets.v4" Version="1.68.0.3624" />
-		<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3124.44" />
 		<PackageReference Include="MSBuildTasks" Version="1.5.0.235">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="System.Management" Version="8.0.0" />
-		<PackageReference Include="WebView2.Runtime.X86" Version="134.0.3124.68" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -134,7 +132,7 @@
 		
 		<PropertyGroup>
 			<OutputDir>$(PublishDir)</OutputDir>
-			<ZipFilePath>$(PublishDir)企鵝之野望$(VersionNumber).zip</ZipFilePath>
+			<ZipFilePath>C:\NOBAPP\企鵝之野望$(VersionNumber).zip</ZipFilePath>
 			<SevenZipPath>"C:\Program Files\7-Zip\7z.exe"</SevenZipPath>
 		</PropertyGroup>
 		<Message Importance="High" Text="版號 : $(VersionNumber)" />
