--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,38 @@
 /bin/Debug/net8.0-windows7.0/NOBApp.dll
 /bin/Debug/net8.0-windows7.0/NOBApp.exe
 /bin/Debug/net8.0-windows7.0/NOBApp.pdb
+/bin/Debug/net8.0-windows7.0/Google.Apis.Auth.dll
+/bin/Debug/net8.0-windows7.0/Google.Apis.Core.dll
+/bin/Debug/net8.0-windows7.0/Google.Apis.Sheets.v4.dll
+/bin/Debug/net8.0-windows7.0/Google.Apis.dll
+/bin/Debug/net8.0-windows7.0/NOBApp.deps.json
+/bin/Debug/net8.0-windows7.0/NOBApp.runtimeconfig.json
+/bin/Debug/net8.0-windows7.0/Newtonsoft.Json.dll
+/bin/Debug/net8.0-windows7.0/System.Management.dll
+/bin/Debug/net8.0-windows7.0/TabState.json
+/bin/Debug/net8.0-windows7.0/libs/Bkgnd.dll
+/bin/Debug/net8.0-windows7.0/libs/DmReg.dll
+/bin/Debug/net8.0-windows7.0/libs/dm.dll
+/bin/Debug/net8.0-windows7.0/libs/handle.exe
+/bin/Debug/net8.0-windows7.0/runtimes/win/lib/net8.0/System.Management.dll
+/bin/Debug/net8.0-windows7.0/startup_error.log
+/bin/Debug/net8.0-windows7.0/xx010412_CDK.nob
+/bin/Debug/net8.0-windows7.0/xx010435_CDK.nob
+/bin/Debug/net8.0-windows7.0/冰寧企鵝皇_LoadSK.sk
+Google.Apis.Auth.dll
+Google.Apis.Core.dll
+Google.Apis.Sheets.v4.dll
+Google.Apis.dll
+NOBApp.deps.json
+NOBApp.runtimeconfig.json
+Newtonsoft.Json.dll
+System.Management.dll
+TabState.json
+Bkgnd.dll
+DmReg.dll
+dm.dll
+handle.exe
+startup_error.log
+xx010412_CDK.nob
+xx010435_CDK.nob
+冰寧企鵝皇_LoadSK.sk
